--- a/About.html
+++ b/About.html
@@ -32,8 +32,8 @@
       to attend law school after gaining experience in the legal field. Needless
       to say, I lost that desire. I attended undergraduate at the University of
       Mississippi (Ole Miss) and graduated in 2016. I decided to relocate to
-      Houston, TX, to complete this program and hope to build my network in the
-      State of Texas upon completing this full stack web devlopment program.
+      Texas, to complete this program and hope to build my network in the State
+      of Texas upon completing this full stack web devlopment program.
     </p>
 
     <p>
