--- a/About.html
+++ b/About.html
@@ -26,14 +26,15 @@
       alt="A graduation photo taken at the University of Mississippi"
     />
     <p>
-      I am originally from Mississippi. I recently moved from Atlanta, GA, where
-      I had been working as a paralegal. The law firm I worked for specialized
-      in Plaintiff's work. It was my first job after college. My plan was always
-      to attend law school after gaining experience in the legal field. Needless
-      to say, I lost that desire. I attended undergraduate at the University of
-      Mississippi (Ole Miss) and graduated in 2016. I decided to relocate to
-      Texas, to complete this program and hope to build my network in the State
-      of Texas upon completing this full stack web devlopment program.
+      I am originally from Mississippi. I attended undergraduate at the
+      University of Mississippi (Ole Miss) and graduated in 2016. I recently
+      moved from Atlanta, GA, where I had been working as a paralegal. The law
+      firm I worked for specialized in Plaintiff's work. It was my first job
+      after college. My plan was always to attend law school after gaining
+      experience in the legal field. Needless to say, I lost that desire. I
+      decided to relocate to Texas, to complete this program and hope to build
+      my network in the State of Texas upon completing this full stack web
+      devlopment program.
     </p>
 
     <p>
