--- a/About.html
+++ b/About.html
@@ -32,8 +32,8 @@
       firm I worked for specialized in Plaintiff's work. It was my first job
       after college. My plan was always to attend law school after gaining
       experience in the legal field. Needless to say, I lost that desire. I
-      decided to relocate to Texas to complete this program and hope to build my
-      network in the State of Texas upon completing this full stack web
+      decided to relocate to Texas to complete this program and hopefully build
+      my network in the State of Texas upon completing this full stack web
       devlopment program.
     </p>
 
