--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
   <body>
     <h1>About Me</h1>
     <nav>
-      <a class="home" href="Home.html">Home</a>
+      <a class="home" href="index.html">Home</a>
       <a class="about" href="About.html">About Me</a>
       <a class="social" href="Social.html">Contact Me</a>
     </nav>
