--- a/Social.html
+++ b/Social.html
@@ -17,7 +17,7 @@
     <h1>Socialize</h1>
 
     <nav>
-      <a class="home" href="Home.html">Home</a>
+      <a class="home" href="index.html">Home</a>
       <a class="about" href="About.html">About Me</a>
       <a class="social" href="Social.html">Contact Me</a>
     </nav>
