--- a/Social.html
+++ b/Social.html
@@ -22,7 +22,7 @@
       <a class="social" href="Social.html">Contact Me</a>
     </nav>
 
-<p>Add me on Lindkedin!</p>
+<p>Add me on LinkedIn!</p>
     <a href="https://www.linkedin.com/in/james-k-ivy-69aa2ab5/">
       <img class="Linkedin" src="images/LinkedIn_logo.png"
       />
